# notch

./: .gitignore  LICENSE  README.md
client/: Cargo.toml
client/src/: curve.rs  lib.rs
data/: notch-dataset-buys-1to500.csv  uponly-dataset-sells-after500.csv
docs/: AUDIT.md  DATASETS.md  GUIDE.md  TESTING.md  TOKENOMICS.md
program/: Cargo.toml
program/src/: lib.rs
sim/: notch_sim.py  uponly_sim.py
