[package]
name = "uponly"
version = "0.1.0"
edition = "2021"
description = "UPONLY ratchet-curve token vault: quoted price only rises (buys advance the curve, sells redeem at NAV and pump the floor). No admin functions; vault SOL only exits via Sell."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1.0"
borsh = "1.5.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
